# worker_serverless_docker

./: Dockerfile  README.md  docker-bake.hcl  handler.py
.github/workflows/: manual-push-dockerhub.yml
custom_nodes/ComfyUI-GGUF/: pyproject.toml
custom_nodes/ComfyUI_LayerStyle-main/: README.MD  README_CN.MD  __init__.py
custom_nodes/PLEXARD_API_SEEDREAM/: PLEXARD_FAL_seedream_v4_edit.py  __init__.py  config.ini
custom_nodes/PLEXARD_API_SEEDVR/: PLEXARD_FAL_nano_banana_edit.py  PLEXARD_FAL_qwen_image_edit_inpaint.py  PLEXARD_FAL_seedvr_upscale.py  README.md  __init__.py  requirements.txt
custom_nodes/PLEXARD_FAL_flux_stitch/: PLEXARD_FAL_flux_stitch.py  __init__.py
custom_nodes/PLEXARD_FIXER_BRUSH_NANO_V1/: __init__.py
custom_nodes/cg-use-everywhere/: .tracking
custom_nodes/comfy-plexard_switches/: README.md
custom_nodes/comfyui-detail-daemon/: .tracking  LICENSE  README.md  __init__.py  detail_daemon_node.py  pyproject.toml
custom_nodes/comfyui-detail-daemon/example_workflows/: Comparing Detailers.json  Flux img2img-DetailDaemon.json  Flux inpainting-Detail Daemon.json  Flux upscale-Detail Daemon.json  SDXL txt2img-DetailDaemon.json
custom_nodes/comfyui-easy-use/: .tracking  README.ZH_CN.md  README.md
custom_nodes/comfyui-tooling-nodes/: .tracking
custom_nodes/comfyui_layerstyle/: .tracking  README.MD  README_CN.MD  __init__.py  requirements.txt
custom_nodes/qweneditutils/: .tracking  README.md  nodes.py  pyproject.toml  qwen edit custom.json
docs/: ci-cd.md  configuration.md  deployment.md
src/: extra_model_paths.yaml
(+107 files in other folders)
