[project]
name = "qweneditutils"
description = "A collection of utility nodes for Qwen-based image editing in ComfyUI."
version = "2.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/Comfyui-QwenEditUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "Comfyui-QwenEditUtils"
Icon = ""
